fix overlap issue on mobile for 'more information' button

--- a/sass/includes/_clover-iiif.scss
+++ b/sass/includes/_clover-iiif.scss
@@ -111,6 +111,12 @@
         border: 1px solid $color__black;
         border-radius: 0;
         background-color: $color__grey-300;
+        margin: 4rem 0 0;
+        z-index: 5;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 
     // headings
